--- a/src/main/resources/templates/profile/leave_auth.html
+++ b/src/main/resources/templates/profile/leave_auth.html
@@ -144,7 +144,7 @@
                     검색
                 </button>
 
-                <a href="#" id="notification-icon">
+                <a href="#" id="notification-icon" onclick="openMessages()">
                     <div class="message">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -152,6 +152,13 @@
                         </svg>메시지
                     </div>
                 </a>
+
+                <script>
+                    function openMessages() {
+                        // JavaScript를 사용하여 메시지 페이지로 이동
+                        window.location.href = "/message/rooms";
+                    }
+                </script>
 
                 <button type="button" class="btn btn-primary position-relative bell" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
