--- a/src/main/resources/templates/message/rooms.html
+++ b/src/main/resources/templates/message/rooms.html
@@ -115,6 +115,13 @@
             border-radius : 15px;
         }
 
+        .profile-image {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        margin-right: 5px;
+    }
+
     </style>
 </head>
 <body class="scroll">
@@ -300,9 +307,9 @@
 
     <section class="listBox">
         <div class="list">
-            <ul class="friend-list" th:each="friend : ${followingList}">
-                <!-- data-nickname 속성을 추가하고 해당 속성에 친구의 nickname을 할당 -->
-                <li class="friend-item" th:text="${friend.nickname}" th:attr="data-nickname=${friend.nickname}"></li>
+            <ul class="friend-list" th:each="friend : ${followingList}" style="display : flex;">
+                <img class="profile-image" th:src="${friend.profile}" alt="Profile Image">
+                <li class="friend-item" th:text="${friend.nickname}" th:attr="data-nickname=${friend.nickname}" style="list-style:none;"></li>
             </ul>
         </div>
     </section>
